Change time zone type to Token

--- a/db/data_schema/dimensions.yml
+++ b/db/data_schema/dimensions.yml
@@ -191,7 +191,7 @@ Dimensions:
       Selector: metros.code
       RequiredTables: [metros]
   time_zone:
-    Type: String
+    Type: Token
     QueryKey: tz
     SummableMetrics:
       - downloads
