Clean up JavaScript

--- a/package.json
+++ b/package.json
@@ -29,5 +29,9 @@
     "prettier": "*",
     "typescript": "*",
     "yarn": "*"
+  },
+  "dependencies": {
+    "@hotwired/stimulus": "*",
+    "@hotwired/turbo-rails": "*"
   }
 }
