--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,9 +1,11 @@
-extends: [plugin:prettier/recommended]
+extends: [airbnb-base, plugin:prettier/recommended]
 env:
-  node: true
+  browser: true
   es2024: true
+  node: true
 parserOptions:
   ecmaVersion: latest
   sourceType: module
 rules:
   no-console: off
+  no-param-reassign: off
