Improve handling of localized group member labels

--- a/db/data_schema/dimensions.yml
+++ b/db/data_schema/dimensions.yml
@@ -288,5 +288,5 @@ Dimensions:
       - impressions
     PermitNulls: true
     BigQuery:
-      Selector: COALESCE(feeder_feed, "Default feed")
+      Selector: COALESCE(feeder_feed, "__DEFAULT_FEED__")
       Type: STRING
