Add sort property for episode

--- a/db/data_schema/dimensions.yml
+++ b/db/data_schema/dimensions.yml
@@ -41,6 +41,8 @@ Dimensions:
       - current_episode_age_in_seconds
       - season_number
       - episode_number
+    SortPropreties:
+      - episode_publish_timestamp
     SummableMetrics:
       - downloads
       - impressions
