Indicate required fields on some dimensions

--- a/db/data_schema/dimensions.yml
+++ b/db/data_schema/dimensions.yml
@@ -292,4 +292,5 @@ Dimensions:
     PermitNulls: true
     BigQuery:
       Selector: COALESCE(feeder_feed, "__DEFAULT_FEED__")
+      RequiredColumns: [feeder_feed]
       Type: STRING
